--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@types/three": "^0.176.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -65,6 +66,7 @@
     "thirdweb": "^5.101.1",
     "three": "^0.176.0",
     "vaul": "^0.9.6",
+    "viem": "^2.31.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
